@@ -1,20 +1,9 @@
 /*
- * Licensed to Elasticsearch under one or more contributor
- * license agreements. See the NOTICE file distributed with
- * this work for additional information regarding copyright
- * ownership. Elasticsearch licenses this file to you under
- * the Apache License, Version 2.0 (the "License"); you may
- * not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *    http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing,
- * software distributed under the License is distributed on an
- * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
- * KIND, either express or implied.  See the License for the
- * specific language governing permissions and limitations
- * under the License.
+ * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
+ * or more contributor license agreements. Licensed under the Elastic License
+ * 2.0 and the Server Side Public License, v 1; you may not use this file except
+ * in compliance with, at your election, the Elastic License 2.0 or the Server
+ * Side Public License, v 1.
  */
 package org.elasticsearch.snapshots;
 
@@ -23,9 +12,7 @@ import org.elasticsearch.cluster.metadata.IndexNameExpressionResolver;
 import org.elasticsearch.common.regex.Regex;
 import org.elasticsearch.index.IndexNotFoundException;
 
-import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
@@ -51,7 +38,7 @@ public class SnapshotUtils {
         for (int i = 0; i < selectedIndices.length; i++) {
             String indexOrPattern = selectedIndices[i];
             boolean add = true;
-            if (!indexOrPattern.isEmpty()) {
+            if (indexOrPattern.isEmpty() == false) {
                 if (availableIndices.contains(indexOrPattern)) {
                     if (result == null) {
                         result = new HashSet<>();
@@ -75,9 +62,9 @@ public class SnapshotUtils {
                     indexOrPattern = indexOrPattern.substring(1);
                 }
             }
-            if (indexOrPattern.isEmpty() || !Regex.isSimpleMatchPattern(indexOrPattern)) {
-                if (!availableIndices.contains(indexOrPattern)) {
-                    if (!indicesOptions.ignoreUnavailable()) {
+            if (indexOrPattern.isEmpty() || Regex.isSimpleMatchPattern(indexOrPattern) == false) {
+                if (availableIndices.contains(indexOrPattern) == false) {
+                    if (indicesOptions.ignoreUnavailable() == false) {
                         throw new IndexNotFoundException(indexOrPattern);
                     } else {
                         if (result == null) {
@@ -111,13 +98,14 @@ public class SnapshotUtils {
                     }
                 }
             }
-            if (!found && !indicesOptions.allowNoIndices()) {
+            if (found == false && indicesOptions.allowNoIndices() == false) {
                 throw new IndexNotFoundException(indexOrPattern);
             }
         }
         if (result == null) {
-            return Collections.unmodifiableList(new ArrayList<>(Arrays.asList(selectedIndices)));
+            return List.of(selectedIndices);
         }
-        return Collections.unmodifiableList(new ArrayList<>(result));
+        return List.copyOf(result);
     }
+
 }
