@@ -1,53 +1,59 @@
 /*
- * Licensed to Elasticsearch under one or more contributor
- * license agreements. See the NOTICE file distributed with
- * this work for additional information regarding copyright
- * ownership. Elasticsearch licenses this file to you under
- * the Apache License, Version 2.0 (the "License"); you may
- * not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *    http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing,
- * software distributed under the License is distributed on an
- * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
- * KIND, either express or implied.  See the License for the
- * specific language governing permissions and limitations
- * under the License.
+ * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
+ * or more contributor license agreements. Licensed under the Elastic License
+ * 2.0 and the Server Side Public License, v 1; you may not use this file except
+ * in compliance with, at your election, the Elastic License 2.0 or the Server
+ * Side Public License, v 1.
  */
 
 package org.elasticsearch.repositories;
 
-import org.apache.lucene.index.IndexCommit;
 import org.elasticsearch.Version;
-import org.elasticsearch.cluster.metadata.IndexMetaData;
-import org.elasticsearch.cluster.metadata.MetaData;
-import org.elasticsearch.cluster.metadata.RepositoryMetaData;
+import org.elasticsearch.action.ActionListener;
+import org.elasticsearch.action.admin.cluster.repositories.put.PutRepositoryRequest;
+import org.elasticsearch.cluster.ClusterChangedEvent;
+import org.elasticsearch.cluster.ClusterName;
+import org.elasticsearch.cluster.ClusterState;
+import org.elasticsearch.cluster.ClusterStateUpdateTask;
+import org.elasticsearch.cluster.metadata.IndexMetadata;
+import org.elasticsearch.cluster.metadata.Metadata;
+import org.elasticsearch.cluster.metadata.RepositoriesMetadata;
+import org.elasticsearch.cluster.metadata.RepositoryMetadata;
 import org.elasticsearch.cluster.node.DiscoveryNode;
+import org.elasticsearch.cluster.service.ClusterApplierService;
 import org.elasticsearch.cluster.service.ClusterService;
+import org.elasticsearch.common.Strings;
 import org.elasticsearch.common.UUIDs;
+import org.elasticsearch.common.blobstore.BlobPath;
+import org.elasticsearch.common.blobstore.BlobStore;
 import org.elasticsearch.common.component.Lifecycle;
 import org.elasticsearch.common.component.LifecycleListener;
 import org.elasticsearch.common.settings.Settings;
-import org.elasticsearch.index.shard.IndexShard;
+import org.elasticsearch.common.util.MockBigArrays;
+import org.elasticsearch.common.xcontent.NamedXContentRegistry;
 import org.elasticsearch.index.shard.ShardId;
 import org.elasticsearch.index.snapshots.IndexShardSnapshotStatus;
 import org.elasticsearch.index.store.Store;
+import org.elasticsearch.indices.recovery.RecoverySettings;
 import org.elasticsearch.indices.recovery.RecoveryState;
+import org.elasticsearch.repositories.blobstore.MeteredBlobStoreRepository;
 import org.elasticsearch.snapshots.SnapshotId;
 import org.elasticsearch.snapshots.SnapshotInfo;
-import org.elasticsearch.snapshots.SnapshotShardFailure;
 import org.elasticsearch.test.ESTestCase;
 import org.elasticsearch.threadpool.ThreadPool;
 import org.elasticsearch.transport.Transport;
 import org.elasticsearch.transport.TransportService;
 
-import java.io.IOException;
+import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
+import java.util.Map;
+import java.util.function.Consumer;
+import java.util.function.Function;
 
+import static org.hamcrest.Matchers.equalTo;
 import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.when;
 
 public class RepositoriesServiceTests extends ESTestCase {
 
@@ -57,12 +63,36 @@ public class RepositoriesServiceTests extends ESTestCase {
     public void setUp() throws Exception {
         super.setUp();
         ThreadPool threadPool = mock(ThreadPool.class);
-        final TransportService transportService = new TransportService(Settings.EMPTY, mock(Transport.class), threadPool,
+        final TransportService transportService = new TransportService(
+            Settings.EMPTY,
+            mock(Transport.class),
+            threadPool,
             TransportService.NOOP_TRANSPORT_INTERCEPTOR,
-            boundAddress -> DiscoveryNode.createLocal(Settings.EMPTY, boundAddress.publishAddress(), UUIDs.randomBase64UUID()), null,
-            Collections.emptySet());
-        repositoriesService = new RepositoriesService(Settings.EMPTY, mock(ClusterService.class),
-            transportService, Collections.emptyMap(), Collections.singletonMap(TestRepository.TYPE, TestRepository::new), threadPool);
+            boundAddress -> DiscoveryNode.createLocal(Settings.EMPTY, boundAddress.publishAddress(), UUIDs.randomBase64UUID()),
+            null,
+            Collections.emptySet()
+        );
+        final ClusterApplierService clusterApplierService = mock(ClusterApplierService.class);
+        when(clusterApplierService.threadPool()).thenReturn(threadPool);
+        final ClusterService clusterService = mock(ClusterService.class);
+        when(clusterService.getClusterApplierService()).thenReturn(clusterApplierService);
+        Map<String, Repository.Factory> typesRegistry = Map.of(
+            TestRepository.TYPE,
+            TestRepository::new,
+            MeteredRepositoryTypeA.TYPE,
+            metadata -> new MeteredRepositoryTypeA(metadata, clusterService),
+            MeteredRepositoryTypeB.TYPE,
+            metadata -> new MeteredRepositoryTypeB(metadata, clusterService)
+        );
+        repositoriesService = new RepositoriesService(
+            Settings.EMPTY,
+            mock(ClusterService.class),
+            transportService,
+            typesRegistry,
+            typesRegistry,
+            threadPool
+        );
+        repositoriesService.start();
     }
 
     public void testRegisterInternalRepository() {
@@ -99,58 +129,119 @@ public class RepositoriesServiceTests extends ESTestCase {
         assertSame(repository, repository2);
     }
 
+    public void testRegisterRejectsInvalidRepositoryNames() {
+        assertThrowsOnRegister("");
+        assertThrowsOnRegister("contains#InvalidCharacter");
+        for (char c : Strings.INVALID_FILENAME_CHARS) {
+            assertThrowsOnRegister("contains" + c + "InvalidCharacters");
+        }
+    }
+
+    public void testRepositoriesStatsCanHaveTheSameNameAndDifferentTypeOverTime() {
+        String repoName = "name";
+        expectThrows(RepositoryMissingException.class, () -> repositoriesService.repository(repoName));
+
+        ClusterState clusterStateWithRepoTypeA = createClusterStateWithRepo(repoName, MeteredRepositoryTypeA.TYPE);
+
+        repositoriesService.applyClusterState(new ClusterChangedEvent("new repo", clusterStateWithRepoTypeA, emptyState()));
+        assertThat(repositoriesService.repositoriesStats().size(), equalTo(1));
+
+        repositoriesService.applyClusterState(new ClusterChangedEvent("new repo", emptyState(), clusterStateWithRepoTypeA));
+        assertThat(repositoriesService.repositoriesStats().size(), equalTo(1));
+
+        ClusterState clusterStateWithRepoTypeB = createClusterStateWithRepo(repoName, MeteredRepositoryTypeB.TYPE);
+        repositoriesService.applyClusterState(new ClusterChangedEvent("new repo", clusterStateWithRepoTypeB, emptyState()));
+
+        List<RepositoryStatsSnapshot> repositoriesStats = repositoriesService.repositoriesStats();
+        assertThat(repositoriesStats.size(), equalTo(2));
+        RepositoryStatsSnapshot repositoryStatsTypeA = repositoriesStats.get(0);
+        assertThat(repositoryStatsTypeA.getRepositoryInfo().type, equalTo(MeteredRepositoryTypeA.TYPE));
+        assertThat(repositoryStatsTypeA.getRepositoryStats(), equalTo(MeteredRepositoryTypeA.STATS));
+
+        RepositoryStatsSnapshot repositoryStatsTypeB = repositoriesStats.get(1);
+        assertThat(repositoryStatsTypeB.getRepositoryInfo().type, equalTo(MeteredRepositoryTypeB.TYPE));
+        assertThat(repositoryStatsTypeB.getRepositoryStats(), equalTo(MeteredRepositoryTypeB.STATS));
+    }
+
+    private ClusterState createClusterStateWithRepo(String repoName, String repoType) {
+        ClusterState.Builder state = ClusterState.builder(new ClusterName("test"));
+        Metadata.Builder mdBuilder = Metadata.builder();
+        mdBuilder.putCustom(
+            RepositoriesMetadata.TYPE,
+            new RepositoriesMetadata(Collections.singletonList(new RepositoryMetadata(repoName, repoType, Settings.EMPTY)))
+        );
+        state.metadata(mdBuilder);
+
+        return state.build();
+    }
+
+    private ClusterState emptyState() {
+        return ClusterState.builder(new ClusterName("test")).build();
+    }
+
+    private void assertThrowsOnRegister(String repoName) {
+        PutRepositoryRequest request = new PutRepositoryRequest(repoName);
+        expectThrows(RepositoryException.class, () -> repositoriesService.registerRepository(request, null));
+    }
+
     private static class TestRepository implements Repository {
 
         private static final String TYPE = "internal";
         private boolean isClosed;
         private boolean isStarted;
 
-        private final RepositoryMetaData metaData;
+        private final RepositoryMetadata metadata;
 
-        private TestRepository(RepositoryMetaData metaData) {
-            this.metaData = metaData;
+        private TestRepository(RepositoryMetadata metadata) {
+            this.metadata = metadata;
         }
 
         @Override
-        public RepositoryMetaData getMetadata() {
-            return metaData;
+        public RepositoryMetadata getMetadata() {
+            return metadata;
         }
 
         @Override
-        public SnapshotInfo getSnapshotInfo(SnapshotId snapshotId) {
+        public void getSnapshotInfo(GetSnapshotInfoContext context) {
+            throw new UnsupportedOperationException();
+        }
+
+        @Override
+        public Metadata getSnapshotGlobalMetadata(SnapshotId snapshotId) {
             return null;
         }
 
         @Override
-        public MetaData getSnapshotGlobalMetaData(SnapshotId snapshotId) {
+        public IndexMetadata getSnapshotIndexMetaData(RepositoryData repositoryData, SnapshotId snapshotId, IndexId index) {
             return null;
         }
 
         @Override
-        public IndexMetaData getSnapshotIndexMetaData(SnapshotId snapshotId, IndexId index) throws IOException {
-            return null;
+        public void getRepositoryData(ActionListener<RepositoryData> listener) {
+            listener.onResponse(null);
         }
 
         @Override
-        public RepositoryData getRepositoryData() {
-            return null;
+        public void finalizeSnapshot(
+            ShardGenerations shardGenerations,
+            long repositoryStateId,
+            Metadata clusterMetadata,
+            SnapshotInfo snapshotInfo,
+            Version repositoryMetaVersion,
+            Function<ClusterState, ClusterState> stateTransformer,
+            ActionListener<RepositoryData> listener
+        ) {
+            listener.onResponse(null);
         }
 
         @Override
-        public void initializeSnapshot(SnapshotId snapshotId, List<IndexId> indices, MetaData metaData) {
-
-        }
-
-        @Override
-        public SnapshotInfo finalizeSnapshot(SnapshotId snapshotId, List<IndexId> indices, long startTime, String failure,
-                                             int totalShards, List<SnapshotShardFailure> shardFailures, long repositoryStateId,
-                                             boolean includeGlobalState) {
-            return null;
-        }
-
-        @Override
-        public void deleteSnapshot(SnapshotId snapshotId, long repositoryStateId) {
-
+        public void deleteSnapshots(
+            Collection<SnapshotId> snapshotIds,
+            long repositoryStateId,
+            Version repositoryMetaVersion,
+            ActionListener<RepositoryData> listener
+        ) {
+            listener.onResponse(null);
         }
 
         @Override
@@ -184,20 +275,46 @@ public class RepositoriesServiceTests extends ESTestCase {
         }
 
         @Override
-        public void snapshotShard(IndexShard shard, Store store, SnapshotId snapshotId, IndexId indexId, IndexCommit snapshotIndexCommit,
-                                  IndexShardSnapshotStatus snapshotStatus) {
+        public void snapshotShard(SnapshotShardContext context) {
 
         }
 
         @Override
-        public void restoreShard(IndexShard shard, SnapshotId snapshotId, Version version, IndexId indexId, ShardId snapshotShardId,
-                                 RecoveryState recoveryState) {
+        public void restoreShard(
+            Store store,
+            SnapshotId snapshotId,
+            IndexId indexId,
+            ShardId snapshotShardId,
+            RecoveryState recoveryState,
+            ActionListener<Void> listener
+        ) {
 
         }
 
         @Override
-        public IndexShardSnapshotStatus getShardSnapshotStatus(SnapshotId snapshotId, Version version, IndexId indexId, ShardId shardId) {
+        public IndexShardSnapshotStatus getShardSnapshotStatus(SnapshotId snapshotId, IndexId indexId, ShardId shardId) {
             return null;
+        }
+
+        @Override
+        public void updateState(final ClusterState state) {}
+
+        @Override
+        public void executeConsistentStateUpdate(
+            Function<RepositoryData, ClusterStateUpdateTask> createUpdateTask,
+            String source,
+            Consumer<Exception> onFailure
+        ) {}
+
+        @Override
+        public void cloneShardSnapshot(
+            SnapshotId source,
+            SnapshotId target,
+            RepositoryShardId shardId,
+            String shardGeneration,
+            ActionListener<ShardSnapshotResult> listener
+        ) {
+
         }
 
         @Override
@@ -228,6 +345,60 @@ public class RepositoriesServiceTests extends ESTestCase {
         @Override
         public void close() {
             isClosed = true;
+        }
+    }
+
+    private static class MeteredRepositoryTypeA extends MeteredBlobStoreRepository {
+        private static final String TYPE = "type-a";
+        private static final RepositoryStats STATS = new RepositoryStats(Map.of("GET", 10L));
+
+        private MeteredRepositoryTypeA(RepositoryMetadata metadata, ClusterService clusterService) {
+            super(
+                metadata,
+                mock(NamedXContentRegistry.class),
+                clusterService,
+                MockBigArrays.NON_RECYCLING_INSTANCE,
+                mock(RecoverySettings.class),
+                BlobPath.EMPTY,
+                Map.of("bucket", "bucket-a")
+            );
+        }
+
+        @Override
+        protected BlobStore createBlobStore() {
+            return mock(BlobStore.class);
+        }
+
+        @Override
+        public RepositoryStats stats() {
+            return STATS;
+        }
+    }
+
+    private static class MeteredRepositoryTypeB extends MeteredBlobStoreRepository {
+        private static final String TYPE = "type-b";
+        private static final RepositoryStats STATS = new RepositoryStats(Map.of("LIST", 20L));
+
+        private MeteredRepositoryTypeB(RepositoryMetadata metadata, ClusterService clusterService) {
+            super(
+                metadata,
+                mock(NamedXContentRegistry.class),
+                clusterService,
+                MockBigArrays.NON_RECYCLING_INSTANCE,
+                mock(RecoverySettings.class),
+                BlobPath.EMPTY,
+                Map.of("bucket", "bucket-b")
+            );
+        }
+
+        @Override
+        protected BlobStore createBlobStore() {
+            return mock(BlobStore.class);
+        }
+
+        @Override
+        public RepositoryStats stats() {
+            return STATS;
         }
     }
 }
