@@ -1,7 +1,8 @@
 /*
  * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
- * or more contributor license agreements. Licensed under the Elastic License;
- * you may not use this file except in compliance with the Elastic License.
+ * or more contributor license agreements. Licensed under the Elastic License
+ * 2.0; you may not use this file except in compliance with the Elastic License
+ * 2.0.
  */
 package org.elasticsearch.xpack.security.authc;
 
@@ -18,6 +19,7 @@ import org.elasticsearch.xpack.core.security.authc.esnative.NativeRealmSettings;
 import org.elasticsearch.xpack.core.security.authc.file.FileRealmSettings;
 import org.elasticsearch.xpack.core.security.authc.kerberos.KerberosRealmSettings;
 import org.elasticsearch.xpack.core.security.authc.ldap.LdapRealmSettings;
+import org.elasticsearch.xpack.core.security.authc.oidc.OpenIdConnectRealmSettings;
 import org.elasticsearch.xpack.core.security.authc.pki.PkiRealmSettings;
 import org.elasticsearch.xpack.core.security.authc.saml.SamlRealmSettings;
 import org.elasticsearch.xpack.core.ssl.SSLService;
@@ -27,6 +29,7 @@ import org.elasticsearch.xpack.security.authc.esnative.ReservedRealm;
 import org.elasticsearch.xpack.security.authc.file.FileRealm;
 import org.elasticsearch.xpack.security.authc.kerberos.KerberosRealm;
 import org.elasticsearch.xpack.security.authc.ldap.LdapRealm;
+import org.elasticsearch.xpack.security.authc.oidc.OpenIdConnectRealm;
 import org.elasticsearch.xpack.security.authc.pki.PkiRealm;
 import org.elasticsearch.xpack.security.authc.saml.SamlRealm;
 import org.elasticsearch.xpack.security.authc.support.RoleMappingFileBootstrapCheck;
@@ -35,7 +38,6 @@ import org.elasticsearch.xpack.security.support.SecurityIndexManager;
 
 import java.util.Collection;
 import java.util.Collections;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
@@ -45,6 +47,7 @@ import java.util.stream.Collectors;
 /**
  * Provides a single entry point into dealing with all standard XPack security {@link Realm realms}.
  * This class does not handle extensions.
+ *
  * @see Realms for the component that manages configured realms (including custom extension realms)
  */
 public final class InternalRealms {
@@ -53,15 +56,16 @@ public final class InternalRealms {
      * The list of all <em>internal</em> realm types, excluding {@link ReservedRealm#TYPE}.
      */
     private static final Set<String> XPACK_TYPES = Collections
-            .unmodifiableSet(Sets.newHashSet(NativeRealmSettings.TYPE, FileRealmSettings.TYPE, LdapRealmSettings.AD_TYPE,
-                    LdapRealmSettings.LDAP_TYPE, PkiRealmSettings.TYPE, SamlRealmSettings.TYPE, KerberosRealmSettings.TYPE));
+        .unmodifiableSet(Sets.newHashSet(NativeRealmSettings.TYPE, FileRealmSettings.TYPE, LdapRealmSettings.AD_TYPE,
+            LdapRealmSettings.LDAP_TYPE, PkiRealmSettings.TYPE, SamlRealmSettings.TYPE, KerberosRealmSettings.TYPE,
+            OpenIdConnectRealmSettings.TYPE));
 
     /**
      * The list of all standard realm types, which are those provided by x-pack and do not have extensive
      * interaction with third party sources
      */
     private static final Set<String> STANDARD_TYPES = Collections.unmodifiableSet(Sets.newHashSet(NativeRealmSettings.TYPE,
-            FileRealmSettings.TYPE, LdapRealmSettings.AD_TYPE, LdapRealmSettings.LDAP_TYPE, PkiRealmSettings.TYPE));
+        FileRealmSettings.TYPE, LdapRealmSettings.AD_TYPE, LdapRealmSettings.LDAP_TYPE, PkiRealmSettings.TYPE));
 
     /**
      * Determines whether <code>type</code> is an internal realm-type that is provided by x-pack,
@@ -74,7 +78,7 @@ public final class InternalRealms {
         return ReservedRealm.TYPE.equals(type);
     }
 
-    static Collection<String> getConfigurableRealmsTypes() {
+    public static Collection<String> getConfigurableRealmsTypes() {
         return Collections.unmodifiableSet(XPACK_TYPES);
     }
 
@@ -90,6 +94,7 @@ public final class InternalRealms {
     /**
      * Creates {@link Realm.Factory factories} for each <em>internal</em> realm type.
      * This excludes the {@link ReservedRealm}, as it cannot be created dynamically.
+     *
      * @return A map from <em>realm-type</em> to <code>Factory</code>
      */
     public static Map<String, Realm.Factory> getFactories(ThreadPool threadPool, ResourceWatcherService resourceWatcherService,
@@ -97,21 +102,35 @@ public final class InternalRealms {
                                                           NativeRoleMappingStore nativeRoleMappingStore,
                                                           SecurityIndexManager securityIndex) {
 
-        Map<String, Realm.Factory> map = new HashMap<>();
-        map.put(FileRealmSettings.TYPE, config -> new FileRealm(config, resourceWatcherService, threadPool));
-        map.put(NativeRealmSettings.TYPE, config -> {
-            final NativeRealm nativeRealm = new NativeRealm(config, nativeUsersStore, threadPool);
-            securityIndex.addIndexStateListener(nativeRealm::onSecurityIndexStateChange);
-            return nativeRealm;
-        });
-        map.put(LdapRealmSettings.AD_TYPE, config -> new LdapRealm(config, sslService,
-                resourceWatcherService, nativeRoleMappingStore, threadPool));
-        map.put(LdapRealmSettings.LDAP_TYPE, config -> new LdapRealm(config,
-                sslService, resourceWatcherService, nativeRoleMappingStore, threadPool));
-        map.put(PkiRealmSettings.TYPE, config -> new PkiRealm(config, resourceWatcherService, nativeRoleMappingStore));
-        map.put(SamlRealmSettings.TYPE, config -> SamlRealm.create(config, sslService, resourceWatcherService, nativeRoleMappingStore));
-        map.put(KerberosRealmSettings.TYPE, config -> new KerberosRealm(config, nativeRoleMappingStore, threadPool));
-        return Collections.unmodifiableMap(map);
+        return Map.of(
+                // file realm
+                FileRealmSettings.TYPE,
+                config -> new FileRealm(config, resourceWatcherService, threadPool),
+                // native realm
+                NativeRealmSettings.TYPE,
+                config -> {
+                    final NativeRealm nativeRealm = new NativeRealm(config, nativeUsersStore, threadPool);
+                    securityIndex.addStateListener(nativeRealm::onSecurityIndexStateChange);
+                    return nativeRealm;
+                },
+                // active directory realm
+                LdapRealmSettings.AD_TYPE,
+                config -> new LdapRealm(config, sslService, resourceWatcherService, nativeRoleMappingStore, threadPool),
+                // LDAP realm
+                LdapRealmSettings.LDAP_TYPE,
+                config -> new LdapRealm(config, sslService, resourceWatcherService, nativeRoleMappingStore, threadPool),
+                // PKI realm
+                PkiRealmSettings.TYPE,
+                config -> new PkiRealm(config, resourceWatcherService, nativeRoleMappingStore),
+                // SAML realm
+                SamlRealmSettings.TYPE,
+                config -> SamlRealm.create(config, sslService, resourceWatcherService, nativeRoleMappingStore),
+                // Kerberos realm
+                KerberosRealmSettings.TYPE,
+                config -> new KerberosRealm(config, nativeRoleMappingStore, threadPool),
+                // OpenID Connect realm
+                OpenIdConnectRealmSettings.TYPE,
+                config -> new OpenIdConnectRealm(config, sslService, nativeRoleMappingStore, resourceWatcherService));
     }
 
     private InternalRealms() {
