@@ -1,7 +1,8 @@
 /*
  * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
- * or more contributor license agreements. Licensed under the Elastic License;
- * you may not use this file except in compliance with the Elastic License.
+ * or more contributor license agreements. Licensed under the Elastic License
+ * 2.0; you may not use this file except in compliance with the Elastic License
+ * 2.0.
  */
 package org.elasticsearch.xpack.security.authc.ldap;
 
@@ -14,14 +15,13 @@ import com.unboundid.ldap.sdk.SearchScope;
 import org.apache.logging.log4j.Logger;
 import org.elasticsearch.action.ActionListener;
 import org.elasticsearch.common.Strings;
-import org.elasticsearch.common.unit.TimeValue;
+import org.elasticsearch.core.TimeValue;
 import org.elasticsearch.xpack.core.security.authc.RealmConfig;
 import org.elasticsearch.xpack.core.security.authc.ldap.SearchGroupsResolverSettings;
 import org.elasticsearch.xpack.core.security.authc.ldap.support.LdapSearchScope;
 import org.elasticsearch.xpack.security.authc.ldap.support.LdapSession.GroupsResolver;
 
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -59,18 +59,17 @@ class SearchGroupsResolver implements GroupsResolver {
                         Collection<Attribute> attributes, ActionListener<List<String>> listener) {
         getUserId(userDn, attributes, connection, timeout, ActionListener.wrap((userId) -> {
             if (userId == null) {
-                listener.onResponse(Collections.emptyList());
+                listener.onResponse(List.of());
             } else {
                 try {
                     Filter userFilter = createFilter(filter, userId);
-
                     search(connection, baseDn, scope.scope(), userFilter,
                             Math.toIntExact(timeout.seconds()), ignoreReferralErrors,
                             ActionListener.wrap(
                                     (results) -> listener.onResponse(results
                                             .stream()
                                             .map((r) -> r.getDN())
-                                            .collect(Collectors.toList())
+                                            .collect(Collectors.toUnmodifiableList())
                                     ),
                                     listener::onFailure),
                             SearchRequest.NO_ATTRIBUTES);
